# airvo

./: .gitignore  CLA.md  LICENSE  MANIFEST.in  README.md  _start_server.py  compare_history.json  main.py  pyproject.toml
.github/workflows/: cla.yml
airvo/: cli.py  server.py
airvo/api/: routes.py
airvo/cache/: __init__.py  prompt_cache.py
airvo/confidence/: __init__.py  scorer.py
airvo/config/: settings.py
airvo/context/: __init__.py  optimizer.py
airvo/cost/: __init__.py  pricing.py
airvo/discovery/: __init__.py  discoverer.py
airvo/docs/: .~lock.ARCHITECTURE.pdf#  ARCHITECTURE.md  HELP.md
airvo/hardware/: __init__.py  detector.py  memory_manager.py
airvo/history/: __init__.py  store.py
airvo/mcp/: __init__.py  server.py
airvo/privacy/: __init__.py  detector.py
airvo/rag/: __init__.py  indexer.py  retriever.py
airvo/ratings/: __init__.py  store.py
airvo/router/: classifier.py
dashboard/: README.md  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
tests/: test_multi.py
