[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airvo"
version = "0.3.0"
description = "Your local AI coding copilot — any model, any provider, zero cloud."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

keywords = [
    "ai", "copilot", "llm", "coding", "developer-tools",
    "local-ai", "litellm", "continue", "vscode"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ── Runtime dependencies ───────────────────────────────────────────────────
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "litellm>=1.30.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "typer>=0.9.0",
]

# ── Optional dependencies ─────────────────────────────────────────────────
[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.0.0",
    "chromadb>=0.4.0",
]
hardware = [
    "psutil>=5.9.0",
]
all = [
    "sentence-transformers>=2.0.0",
    "chromadb>=0.4.0",
    "psutil>=5.9.0",
]

# ── CLI entry point — makes "airvo" command available after pip install ────
[project.scripts]
airvo = "airvo.cli:app"

# ── Package data — include compiled dashboard and default configs ──────────
[tool.setuptools.packages.find]
where = ["."]
include = ["airvo*"]

[tool.setuptools.package-data]
airvo = [
    "dashboard/dist/**/*",   # compiled React dashboard
    "dashboard/dist/*",
]